--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Games Shop</title>
+    <title>Gray Games</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <p>Games Shop</p>
+    <header>
+        <img src="./img/logo.png" alt="gray games shop logo">
+        <nav>
+         <ul>
+             <li>home</li>
+             <li>colections</li>
+             <li>purchase list</li>
+         </ul>
+        </nav>
+        <button>
+            post an ad
+        </button>
+    </header>
 </body>
 
 </html>
