Search HTML and Style

--- a/index.html
+++ b/index.html
@@ -50,7 +50,26 @@
             </div>
         </header>
     </div>
-  
+    <div id="search" class="container-full-width">
+        <div  class="flex-container margin-x-auto container">
+            <div id="search-text">
+                <img src="./img/logo-text-only.png" alt="logo-text-only">
+                <p>buy ps4 accounts with your favorite games online</p>
+            </div>
+            <div id="search-container">
+                <button class="capitalize">
+                ▼ all departments
+                </button>
+                <input type="text" placeholder="What game are you looking for?">
+                <input type="text" placeholder="Region">
+                <button class="capitalize">
+                   <a href="#">
+                     search
+                   </a>
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
