--- a/index.html
+++ b/index.html
@@ -237,6 +237,19 @@
             </section>
        </div>
     </main>
+    <footer class="grid-container">
+        <div>
+            <img src="./img/logo-text-only.png" alt="logo-text-only">
+            <p>
+            He is resolved to do whatever it takes, at any cost,
+            to protect his people and reclaim his home. He must set aside the traditions that have shaped him as a warrior to forge
+            a new path, the path of the Ghost, and wage an unconventional war for the freedom of Tsushima.
+            </p>
+        </div>
+        <div>
+            
+        </div>
+    </footer>
 </body>
 
 </html>
