fix container problem

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Gray Games</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
@@ -237,7 +236,7 @@
             </section>
        </div>
     </main>
-    <footer class="grid-container">
+    <!-- <footer class="grid-container">
         <div>
             <img src="./img/logo-text-only.png" alt="logo-text-only">
             <p>
@@ -247,9 +246,9 @@
             </p>
         </div>
         <div>
-            
+
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
