Fix image not showing on live demo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section id="hot-ads" class="container margin-x-auto">
           <h2>hot ads</h2>
           <article class="flex-container">
-            <img src="/img/product1.jfif" alt="">
+            <img src="./img/product1.jfif" alt="">
             <section>
                  <h2>ghost of tsushima</h2>
                  <p>
