--- a/result.html
+++ b/result.html
@@ -64,7 +64,7 @@
                 <input type="text" placeholder="What game are you looking for?">
                 <input type="text" placeholder="Region">
                 <button class="capitalize">
-                    <a href="#">
+                    <a href="./result.html">
                         search
                     </a>
                 </button>
