Updating some links

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                     <img id="logo" src="./img/logo.png" alt="gray games shop logo">
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="/index.html">
                                 <i class="fas fa-home"></i>
                                 home
                             </a>
             
                         </li>
                         <li>
-                            <a href="#">\
+                            <a href="#">
                                 <i class="fas fa-book-open"></i>
                                 colections
                             </a>
@@ -64,7 +64,7 @@
                 <input type="text" placeholder="What game are you looking for?">
                 <input type="text" placeholder="Region">
                 <button class="capitalize">
-                   <a href="#">
+                   <a href="./result.html">
                      search
                    </a>
                 </button>
