--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
                 <input type="text" placeholder="What game are you looking for?">
                 <input type="text" placeholder="Region">
                 <button class="capitalize">
-                   <a href="./result.html">
-                     search
-                   </a>
+                   <span>
+                    <a href="./result.html">
+                        search
+                    </a>
+                   </span>
                 </button>
             </div>
         </div>
