Fix HTML Warnings

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <main>
       <section id="hot-ads">
         <h2>hot ads</h2>
-        <article class="grid-container">
+        <div class="grid-container">
           <img src="./img/ghost.jpg" alt="" />
           <section>
             <h2>ghost of tsushima</h2>
@@ -114,7 +114,7 @@
               <button>add to cart</button>
             </div>
           </section>
-        </article>
+        </div>
       </section>
 
       <div id="products" class="darker-bg">
