--- a/result.html
+++ b/result.html
@@ -21,7 +21,7 @@
             <img id="logo" src="./img/logo.png" alt="gray games shop logo" />
             <ul>
               <li>
-                <a href="#">
+                <a href="./index.html">
                   <i class="fas fa-home"></i>
                   home
                 </a>
