--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="flex-container">
         <div class="search-text">
           <img src="./img/logo-text-only.png" alt="logo-text-only" />
-          <p>buy ps4 accounts with your favorite games online</p>
+          <h1>buy ps4 accounts with your favorite games online</h1>
         </div>
         <div class="search-container">
           <button class="capitalize">
