Added pagination and importved footer

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <footer class="container-full-width">
       <div class="grid-container">
         <div class="copy-rights">
-          <img src="./img/logo-text-only-black.png" alt="logo-text-only" />
+          <img src="./img/footer_logo.png" alt="logo-text-only" />
           <p>
             He is resolved to do whatever it takes, at any cost, to protect his
             people and reclaim his home. He must set aside the traditions that
@@ -271,28 +271,24 @@
               <li><a href="#">Lorem Ipsum</a></li>
               <li><a href="#">Lorem Ipsum</a></li>
               <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="categories">
+          <h2>navigation</h2>
+          <div class="grid-container">
             <ul>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-            </ul>
-            <ul>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">colections</a></li>
+              <li><a href="#">purchase list</a></li>
+              <li><a href="#">post an ad</a></li>
             </ul>
           </div>
         </div>
       </div>
     </footer>
+    <div id="copyrights">
+      <p>copyrights reserved to mohab akram@2020</p>
+    </div>
   </body>
 </html>
