--- a/result.html
+++ b/result.html
@@ -79,11 +79,30 @@
       <aside>
         <ul>
           <li>price range</li>
-          <li>50$ - 60$</li>
-          <li>50$ - 60$</li>
-          <li>50$ - 60$</li>
-          <li>50$ - 60$</li>
-          <li>50$ - 60$</li>
+          <li>
+            <input type="checkbox" value="50$ - 60$" />
+            <label for="vehicle1"> 50$ - 60$</label><br />
+          </li>
+          <li>
+            <input type="checkbox" value="50$ - 60$" />
+            <label for="vehicle1"> 50$ - 60$</label><br />
+          </li>
+          <li>
+            <input type="checkbox" value="50$ - 60$" />
+            <label for="vehicle1"> 50$ - 60$</label><br />
+          </li>
+          <li>
+            <input type="checkbox" value="50$ - 60$" />
+            <label for="vehicle1"> 50$ - 60$</label><br />
+          </li>
+          <li>
+            <input type="checkbox" value="50$ - 60$" />
+            <label for="vehicle1"> 50$ - 60$</label><br />
+          </li>
+          <li>
+            <input type="checkbox" value="50$ - 60$" />
+            <label for="vehicle1"> 50$ - 60$</label><br />
+          </li>
         </ul>
       </aside>
       <main>
@@ -217,11 +236,19 @@
         </div>
       </main>
     </div>
+    <div class="pagination">
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+      <span>5</span>
+      <span>6</span>
+    </div>
 
     <footer class="container-full-width">
       <div class="grid-container">
         <div class="copy-rights">
-          <img src="./img/logo-text-only-black.png" alt="logo-text-only" />
+          <img src="./img/footer_logo.png" alt="logo-text-only" />
           <p>
             He is resolved to do whatever it takes, at any cost, to protect his
             people and reclaim his home. He must set aside the traditions that
@@ -237,28 +264,24 @@
               <li><a href="#">Lorem Ipsum</a></li>
               <li><a href="#">Lorem Ipsum</a></li>
               <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="categories">
+          <h2>navigation</h2>
+          <div class="grid-container">
             <ul>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-            </ul>
-            <ul>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
-              <li><a href="#">Lorem Ipsum</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">colections</a></li>
+              <li><a href="#">purchase list</a></li>
+              <li><a href="#">post an ad</a></li>
             </ul>
           </div>
         </div>
       </div>
     </footer>
+    <div id="copyrights">
+      <p>copyrights reserved to mohab akram@2020</p>
+    </div>
   </body>
 </html>
