Fix HTML validation errors

--- a/result.html
+++ b/result.html
@@ -81,27 +81,27 @@
           <li>price range</li>
           <li>
             <input type="checkbox" value="50$ - 60$" />
-            <label for="vehicle1"> 50$ - 60$</label><br />
+            <label> 50$ - 60$</label><br />
           </li>
           <li>
             <input type="checkbox" value="50$ - 60$" />
-            <label for="vehicle1"> 50$ - 60$</label><br />
+            <label> 50$ - 60$</label><br />
           </li>
           <li>
             <input type="checkbox" value="50$ - 60$" />
-            <label for="vehicle1"> 50$ - 60$</label><br />
+            <label> 50$ - 60$</label><br />
           </li>
           <li>
             <input type="checkbox" value="50$ - 60$" />
-            <label for="vehicle1"> 50$ - 60$</label><br />
+            <label> 50$ - 60$</label><br />
           </li>
           <li>
             <input type="checkbox" value="50$ - 60$" />
-            <label for="vehicle1"> 50$ - 60$</label><br />
+            <label> 50$ - 60$</label><br />
           </li>
           <li>
             <input type="checkbox" value="50$ - 60$" />
-            <label for="vehicle1"> 50$ - 60$</label><br />
+            <label> 50$ - 60$</label><br />
           </li>
         </ul>
       </aside>
